--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,6 @@
     "@std/expect": "jsr:@std/expect@^1",
     "@std/testing": "jsr:@std/testing@^1",
     "grammy": "https://lib.deno.dev/x/grammy@v1/mod.ts",
-    "grammy/types": "https://deno.land/x/grammy_types@v3.22.2/mod.ts"
+    "grammy/types": "https://lib.deno.dev/x/grammy@v1/types.ts"
   }
 }
