feat: add menu method to MenuRegistry with middleware collection
- Add menu() method to MenuRegistry that accepts a menu template id
- Generate random nanoid as rendered menu id and call MenuTemplate.render()
- Collect rendered Menu's middleware into Composer and expose to user
- Add getMiddlewareEntries() getter to Menu class for accessing middleware map
- Add nanoid dependency to deno.json imports

--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,7 @@
     "@std/expect": "jsr:@std/expect@^1",
     "@std/testing": "jsr:@std/testing@^1",
     "grammy": "https://lib.deno.dev/x/grammy@v1/mod.ts",
-    "grammy/types": "https://lib.deno.dev/x/grammy@v1/types.ts"
+    "grammy/types": "https://lib.deno.dev/x/grammy@v1/types.ts",
+    "nanoid": "npm:nanoid"
   }
 }
