chore: pin nanoid to version ^5 for reproducible builds

--- a/deno.json
+++ b/deno.json
@@ -17,6 +17,6 @@
     "@std/testing": "jsr:@std/testing@^1",
     "grammy": "https://lib.deno.dev/x/grammy@v1/mod.ts",
     "grammy/types": "https://lib.deno.dev/x/grammy@v1/types.ts",
-    "nanoid": "npm:nanoid"
+    "nanoid": "npm:nanoid@^5"
   }
 }
