--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,16 +2,24 @@ name: Test
 
 on:
   push:
-    branches: [main]
+    branches: [
+      main,
+    ]
   pull_request:
-    branches: [main]
+    branches: [
+      main,
+    ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        testType: ["lint", "fmt", "test"]
+        testType: [
+          "lint",
+          "fmt",
+          "test",
+        ]
 
     steps:
       - name: Checkout code
