Update nanoid dep source

--- a/deno.json
+++ b/deno.json
@@ -18,6 +18,6 @@
     "@std/testing": "jsr:@std/testing@^1",
     "grammy": "https://lib.deno.dev/x/grammy@v1/mod.ts",
     "grammy/types": "https://lib.deno.dev/x/grammy@v1/types.ts",
-    "nanoid": "npm:nanoid@^5"
+    "nanoid": "jsr:@sitnik/nanoid@^5"
   }
 }
