--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "deno.enable": true,
-  "deno.lint": true
+  "deno.lint": true,
+  "deno.suggest.imports.hosts": {
+    "https://deno.land": false,
+    "https://lib.deno.dev": true
+  }
 }
